# ml-trading-agent

./: .gitignore  Dockerfile  README.md  algo_trading_patterns.md  architecture_blueprint.md  checklist.md  config.yaml  dashboard_with_agent.py  env.yaml  leakage_validation_playbook.md  main.py  market_primer.md  performance_optimization.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  technical_indicators_and_patterns.md  ts_ml_foundations.md  ui_ux_guidelines.md  vercel.json
agent/: context_provider.py  phoenix_agent.py
api/: agent_api.py  app.py
app/: dashboard.py  dashboard_advanced.py
backtest/: __init__.py  basic_simulator.py  core.py  engine.py  run.py
compliance/: audit_log.py  compliance.md  contracts.py  logger.py
config/: live.yaml  models.yaml
configs/: classic_xgb.yaml
contracts/: interfaces.md
data/: __init__.py  adapter_yahoo.py  alpha_vantage.py  anomaly.py  fees_quality.py  get_data_yahoo.py  live.py  loader.py  quality.py  save_parquet.py
decisions/: README.md  dashboard_production_plan_spec.md  fix_code_cleanup_pass1_summary.md  fix_mypy_pass2_summary.md  log.py
docs/: README.md  phoenix_checklist.md  phoenix_checklist.yaml  spec_summary.md
features/: __init__.py  atr.py  hmm.py  macd.py  obv.py  pipeline.py  regime.py  rsi.py  vwap.py
infra/: __init__.py  cli.py  runner.py  subprocess_utils.py  utils.py
labeling/: __init__.py  confidence.py  next_bar.py  triple_barrier.py
live/: runner.py  trader.py
ml/: continuous_learning.py
models/: __init__.py  baseline.py  contract.py  dummy.py  interface.py  (+7 more)
(+138 files in other folders)
