[tool]
tool = "poetry"

[project]
name = "ml-trading-agent"
version = "0.1.0"
description = "ML-based trading agent with realism"
dependencies = [
  "pandas<9.0",
  "numpy",
  "scikit-learn",
  "xgboost",
  "lightgbm",
  "numba",
  "matplotlib",
  "plotly",
  "optuna",
  "docer"
]

[tool.build]
dependencies = ["pytest", "ruff", "mypy"]
